# cai-hobbes

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE  PROPOSED-DOC-CONTEXT-ARCH.md  README.md  branch_diff.txt  build.rs  dioxus_best_practices.md  feature_update_plan.md  install_rooflow_conport.sh  mcp_servers.json  package-lock.json  package.json  system_prompt.md  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.roo/: mcp.json  system-prompt-flow-architect  system-prompt-flow-ask  system-prompt-flow-code  system-prompt-flow-debug  system-prompt-flow-orchestrator
apps/macos_app/: Cargo.toml
apps/windows_app/: Cargo.toml
assets/: output.css  tailwind.css
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  projectPlan.md  systemPatterns.md  taskBreakdown.md
src/: hotkey.rs  main.rs  menu.rs  permissions.rs  secure_storage.rs  session.rs  settings.rs  tray.rs
src/components/: chat.rs  link_with_controls.rs  llm.rs  mod.rs  session_manager.rs  settings_panel.rs  shared.rs  stream_manager.rs  tool_call_display.rs
src/context/: mod.rs  permissions.rs  prompt_builder.rs  security.rs
src/mcp/: manager.rs  mod.rs
src/processing/: conversation_processor.rs  mod.rs
src/services/: document_store.rs  mod.rs  tool_call_summarizer.rs
tasks/: 01-hobbes-mvp-core-assistant.md
