[package]
name = "macos_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "macos_app"
path = "../../src/main.rs"

[dependencies]
# Workspace dependencies
dioxus = { workspace = true, features = ["desktop"] }
dioxus-desktop = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tray-icon = { workspace = true }
image = { workspace = true, features = ["png"] }
dioxus-signals = { workspace = true }
global-hotkey = { workspace = true }
dioxus-logger = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
macos-accessibility-client = { workspace = true }
dioxus-free-icons = { workspace = true, features = ["feather"] }
pulldown-cmark = { workspace = true }

# Internal packages
hobbes_core = { path = "../../packages/hobbes_core" }
feature_clipboard = { path = "../../packages/feature_clipboard" }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "5.0"
syntect = "5.2"
lazy_static = "1.4"